--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 warp = "^0.3"
 tokio = { version = "^1", features = ["full"] }
+async-trait = "0.1.83"
+async_once = "0.2.6"
